--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node index.js",
+		"build:ui": "rm -rf build && cd ../new-website/ && npm run build && cp -r build ../bcakground",
+		"deploy": "git push heroku master",
+		"deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
 		"dev": "nodemon index.js",
+		"logs:prod": "heroku logs --tail",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "Transirizo",
