--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js",
+		"start": "NODE_ENV=production node index.js",
 		"build:ui": "rm -rf build && cd ../new-website/ && npm run build && cp -r build ../bcakground",
 		"deploy": "git push heroku master",
 		"deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
-		"dev": "nodemon index.js",
+		"dev": "NODE_ENV=development nodemon index.js",
 		"logs:prod": "heroku logs --tail",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "NODE_ENV=test jest --verbose --runInBand --forceExit"
 	},
 	"author": "Transirizo",
 	"license": "ISC",
@@ -18,9 +18,15 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.1",
 		"express": "^4.18.1",
+		"express-async-errors": "^3.1.1",
 		"mongoose": "^6.3.4"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.16"
+		"jest": "^28.1.1",
+		"nodemon": "^2.0.16",
+		"supertest": "^6.2.3"
+	},
+	"jest": {
+		"testEnvironment": "node"
 	}
 }
